--- a/flexible-compute-engine/news/src/main/appengine/app.yaml
+++ b/flexible-compute-engine/news/src/main/appengine/app.yaml
@@ -6,8 +6,17 @@ runtime_config:
 handlers:
 - url: /.*
   script: this field is required, but ignored
-manual_scaling:
-  instances: 1
+
+#manual_scaling:
+  #instances: 1
+
+# Automatic Scaling
+automatic_scaling: 
+  min_num_instances: 2 
+  max_num_instances: 4 
+  cool_down_period_sec: 180 
+  cpu_utilization: 
+    target_utilization: 0.6
 resources:
   cpu: 1
   memory_gb: 3.75
