--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # Compiled class file
 *.class
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
 
 # Log file
 *.log
