--- a/kubernetes-deployment/news/Dockerfile
+++ b/kubernetes-deployment/news/Dockerfile
@@ -1,4 +1,4 @@
 FROM gcr.io/google_appengine/jetty9
 VOLUME /tmp
-ADD target/news-0.0.1-SNAPSHOT /app.jar
+ADD target/news-0.0.1-SNAPSHOT.jar /app.jar
 CMD java -jar /app.jar
