updated file to read configurations from git repo

--- a/guestbook-configserver/config-server/src/main/resources/application.properties
+++ b/guestbook-configserver/config-server/src/main/resources/application.properties
@@ -1,10 +1,7 @@
 server.port=8888
+
+#use below property to use property files from local config folder
 #spring.profiles.active=native
+
 spring.cloud.config.server.git.uri=https://github.com/Mohsin0568/config-server
-#spring.cloud.config.server.git.uri=https://github.com/Mohsin0568/GCP/tree/main/guestbook-configserver/config-properties
-
-#branch name
-#spring.cloud.config.label=main
-
-#not working
 spring.cloud.config.server.git.search-paths=guestbook-*
