added security to config server

--- a/guestbook-configserver/config-server/src/main/resources/application.properties
+++ b/guestbook-configserver/config-server/src/main/resources/application.properties
@@ -5,3 +5,7 @@ server.port=8888
 
 spring.cloud.config.server.git.uri=https://github.com/Mohsin0568/config-server
 spring.cloud.config.server.git.search-paths=guestbook-*
+
+#below are the default credentials which will be used by clients to access config server
+spring.security.user.name=demo
+spring.security.user.password=demo
