added credentials to access config server

--- a/guestbook-configserver/guestbook-service/src/main/resources/bootstrap.properties
+++ b/guestbook-configserver/guestbook-service/src/main/resources/bootstrap.properties
@@ -1,2 +1,4 @@
 spring.application.name=guestbook-backend
 spring.cloud.config.uri=http://localhost:8888
+spring.cloud.config.username=demo
+spring.cloud.config.password=demo
