--- a/guestbook-configserver/config-server/src/main/resources/application.properties
+++ b/guestbook-configserver/config-server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8888
+server.port=${PORT:8888}
 
 #use below property to use property files from local config folder
 #spring.profiles.active=native
